== 0.1.8 2009-11-03

Several exciting news in this release - transforms, calling of steps from step definitions
and WebDriver examples.

IMPORTANT: You should upgrade to JRuby 1.4.0 and Cucumber 0.4.3.

=== New Features
* Two new examples using WebDriver (with Groovy or Java) have been added. (Aslak Hellesøy)
* Ability to call steps from step definitions in Scala. (Jon-Anders Teigen)
* Ability to call steps from step definitions in Guice. (Henning Jensen)
* A new @Transform is used to annotate methods that converts a string to specific type. 
  See examples/java/features/transform.feature an example of how it's done (Torbjørn Vatn)

=== Bugfixes
* Made programming language dependencies optional (Aslak Hellesøy)

== 0.1.7 2009-10-15

This is an exciting new release with several great new features. (You must upgrade to cucumber 0.4.2).

You can now call other steps by String:

  @When("^I call another step$")
  public void iCallAnotherStep() {
      Given("it is magic");
  }

This is currently only supported if you use PicoContainer or Spring (but not yet Guice - see below).
Your Step Definition class must inherit from cuke4duke.Steps and declare a dependency on cuke4duke.StepMother in the constructor.

Another great new feature is support for Guice. Cuke4Duke now supports three DI containers!

Ioke support is also getting better. It now supports snippets and has better error reporting.

=== New Features
* Better ANSI color support on Windows with http://github.com/aslakhellesoy/wac. (Aslak Hellesøy)
* Guice support (Henning Jensen)
* Enable Java step definitions to call other steps indirectly by just providing a string. (#26 Aslak Hellesøy, Trond Marius Øvstetun)
* Ioke snippets and better error reporting. (Ola Bini)

== 0.1.6 2009-10-09

IMPORTANT: You *must* upgrade to JRuby 1.4.0RC1 and Cucumber 0.4.0.

There are several steps to this:
1) rm -Rf ~/.m2/repository/.gem
3) Change your POM to use JRuby 1.4.0RC1
3) Change your POM to use Cucumber 0.4.0