@@ -9,9 +9,6 @@ Feature: Division
     When I press divide
     Then the current value should be 1.5
 
-  # In order to make this pass we need a Before hook
-  # that resets the calculator...
-  #
   Scenario: More regular numbers
     Given I have entered 7 into the calculator
     And I have entered 2 into the calculator
